--- a/CareerExplorer.Web/Views/Chat/GetJobSeekerChats.cshtml
+++ b/CareerExplorer.Web/Views/Chat/GetJobSeekerChats.cshtml
@@ -5,29 +5,33 @@
 
 <table class="table table-hover">
     <tbody>
-        @foreach(var chat in Model)
+        @if(Model.Count() > 0)
         {
 
-            var appUser = @chat.Users.First(x => x.UserType == UserType.Recruiter);
-            var recruiter = appUser.RecruiterProfile;
+            @foreach (var chat in Model)
+            {
 
-            
-            <tr class="click-row" data-receiverid="@appUser.Id">
-                   <th>
-                       <h3 style="font-size:15px;">@appUser.Email</h3>
-                    <h2 style="font-size:20px;">@recruiter.Company</h2>
-                       <span>
-                           @recruiter.Name 
-                           @recruiter.Surname
-                       </span>
-                   </th>
-                   <th>
-                       <p>@chat.Messages.Last().Text</p>
-                   </th>
-                <th style="padding-bottom: 3rem;padding-left: 3rem;padding-right: 0.5rem;">
-                    <i data-chatid="@chat.Id" class="bi bi-trash3-fill" style="font-size:20px;"></i>
-                </th>
-                </tr>         
+                var appUser = @chat.Users.First(x => x.UserType == UserType.Recruiter);
+                var recruiter = appUser.RecruiterProfile;
+
+
+                <tr class="click-row" data-receiverid="@appUser.Id">
+                    <th>
+                        <h3 style="font-size:15px;">@appUser.Email</h3>
+                        <h2 style="font-size:20px;">@recruiter.Company</h2>
+                        <span>
+                            @recruiter.Name
+                            @recruiter.Surname
+                        </span>
+                    </th>
+                    <th>
+                        <p>@chat.Messages.LastOrDefault()?.Text</p>
+                    </th>
+                    <th style="padding-bottom: 3rem;padding-left: 3rem;padding-right: 0.5rem;">
+                        <i data-chatid="@chat.Id" class="bi bi-trash3-fill" style="font-size:20px;"></i>
+                    </th>
+                </tr>
+            }
         }
     </tbody>
 </table>
