--- a/CareerExplorer.Web/Views/Chat/GetRecruiterChats.cshtml
+++ b/CareerExplorer.Web/Views/Chat/GetRecruiterChats.cshtml
@@ -9,25 +9,28 @@
         {
             @foreach (var chat in Model)
             {
-            var appUser = chat.Users.First(x => x.UserType == UserType.JobSeeker);
-            var jobSeeker = appUser.JobSeekerProfile;
-            <tr class="click-row" data-receiverid="@appUser.Id">
-                <th>
-                    <h3 style="font-size:20px;">@appUser.Email</h3>
-                    <span>
-                    @jobSeeker.Name
-                    @jobSeeker.Surname
-                    </span>
+            var appUser = chat.Users.FirstOrDefault(x => x.UserType == UserType.JobSeeker);
+                @if(appUser != null)
+                {
+                    var jobSeeker = appUser?.JobSeekerProfile;
+                    <tr class="click-row" data-receiverid="@appUser?.Id">
+                        <th>
+                            <h3 style="font-size:20px;">@appUser?.Email</h3>
+                            <span>
+                                @jobSeeker?.Name
+                                @jobSeeker?.Surname
+                            </span>
 
-                              
-                </th>
-                <th>
-                    <p>@chat.Messages.LastOrDefault()?.Text</p>
-                </th>
-                <th style="padding-bottom: 3rem;padding-left: 3rem;padding-right: 0.5rem;">
-                    <i data-chatid="@chat.Id" class="bi bi-trash3-fill" style="font-size:20px;"></i>
-                </th>
-            </tr>
+
+                        </th>
+                        <th>
+                            <p>@chat.Messages.LastOrDefault()?.Text</p>
+                        </th>
+                        <th style="padding-bottom: 3rem;padding-left: 3rem;padding-right: 0.5rem;">
+                            <i data-chatid="@chat.Id" class="bi bi-trash3-fill" style="font-size:20px;"></i>
+                        </th>
+                    </tr>
+                }               
             }
         }
         
